nginx-hello/apache_DC.yml
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: apache
  labels:
    name: apache-dc
spec:
  replicas: 2
  selector:
    app: proxy
  template: 
    metadata:
      labels:
        app: proxy
    spec:
        containers:
        - name: apache
          image: centos/httpd-24-centos7
          ports:
            - containerPort: 8080
  strategy:
      type: Rolling
