nginx-hello/nginx-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: nginx10
  template:
    metadata:
      labels:
        component: nginx10
    spec:
      containers:
        - name: nginx10-pod
          image: naveenhm/nginx10
          ports:
            - containerPort: 8080
