nginx-hello/Openshift-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: openshift-service
spec:
  type: ClusterIP
  selector:
    component: client 
  ports:
    - port: 80
      targetPort: 80
