nginx-hello/nginx-helllo-svc.yml
apiVersion: v1
kind: Service
metadata: 
  name: nginx-service
spec:
  type: ClusterIP
  ports:
    - targetPort: 80
      port: 80
  selector:
    component: nginx1
