nginx-hello/nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx_service
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 32567
  selector:
    component: nginx10
