nginx-hello/ingress-service-hello.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata: 
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            backend: 
              serviceName: nginx-service
              servicePort: 80
          - path: /hello
            backend:
              serviceName: openshift-service
              servicePort: 80
